--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "editorconfig": "editorconfig-cli",
     "stylelint": "stylelint \"source/sass/**/*.scss\" --syntax scss",
     "test": "npm run editorconfig && npm run stylelint",
-    "build": "gulp clean && gulp copy && gulp css && gulp sprite && gulp html",
+    "build": "gulp clean && gulp copy && gulp css && gulp normalize && gulp sprite && gulp html",
     "start": "gulp start"
   },
   "browserslist": [
