--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "editorconfig": "editorconfig-cli",
     "stylelint": "stylelint \"source/sass/**/*.scss\" --syntax scss",
     "test": "npm run editorconfig && npm run stylelint",
+    "imagemin": "gulp images",
+    "webp": "gulp webp",
     "build": "gulp clean && gulp copy && gulp css && gulp normalize && gulp sprite && gulp html",
     "start": "gulp start"
   },
