--- a/package.json
+++ b/package.json
@@ -48,5 +48,9 @@
   ],
   "engines": {
     "node": "8.15"
+  },
+  "dependencies": {
+    "object-fit-images": "^3.2.4",
+    "objectFitPolyfill": "^2.2.0"
   }
 }
