--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "dependencies": {
     "object-fit-images": "^3.2.4",
-    "objectFitPolyfill": "^2.2.0"
+    "objectFitPolyfill": "^2.2.0",
+    "svgxuse": "^1.2.6"
   }
 }
